--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "routing-controllers",
+  "name": "@mingyang91/routing-controllers",
   "private": true,
-  "version": "0.7.8",
+  "version": "0.8.2",
   "description": "Create structured, declarative and beautifully organized class-based controllers with heavy decorators usage for Express / Koa using TypeScript.",
   "license": "MIT",
   "readmeFilename": "README.md",
@@ -34,7 +34,7 @@
   ],
   "dependencies": {
     "class-transformer": "^0.1.9",
-    "class-validator": "0.8.4",
+    "class-validator": "^0.8.5",
     "cookie": "^0.3.1",
     "glob": "^7.0.5",
     "reflect-metadata": "^0.1.12",
